--- a/app/src/main/res/layout/congrats_activity.xml
+++ b/app/src/main/res/layout/congrats_activity.xml
@@ -6,15 +6,16 @@
 
     <ImageView
         android:id="@+id/congrats"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="92px"
-        android:layout_marginLeft="1px"
+        android:layout_width="360dp"
+        android:layout_height="330dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginRight="100dp"
         android:background="@drawable/petasan"
+        app:layout_constraintHorizontal_bias="0.673"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginHorizontal="20dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/teks1"
